# vegen

./: .gitignore  CMakeLists.txt  compile.sh  record.md  record.txt  sanitizers.cmake
.cache/clangd/index/: BlockBuilder.cpp.4B4E3802389B1091.idx  BlockBuilder.h.FF6B232B94521134.idx  ConsecutiveCheck.cpp.128092BA7F3EC007.idx  ConsecutiveCheck.h.850DF6D266882448.idx  ControlDependence.cpp.E0B3DE9912B1169A.idx  ControlDependence.h.40DAA47E0AF149DA.idx  ControlReifier.cpp.D03879F6EC259A0E.idx  ControlReifier.h.CDF7DFB1C9BAC15F.idx  DependenceAnalysis.cpp.82CBBEA4F2401878.idx  DependenceAnalysis.h.3CBFF6CEA4B255D4.idx  GSLP.cpp.30F12B4DF31101B6.idx  Heuristic.cpp.5912E7FCD703551B.idx  Heuristic.h.AD76F5D3C8579350.idx  IRVec.cpp.99CB640AB486F035.idx  IRVec.h.9C59EEA040B25A16.idx  InstSema.h.651904B6B70E4F76.idx  IntrinsicBuilder.cpp.662ED1B66C7423CD.idx  IntrinsicBuilder.h.30A7604C8DBC1F71.idx  LoopAwareRPO.cpp.81048466336D3E3D.idx  LoopAwareRPO.h.5A84E973186AEF73.idx  LoopUnrolling.cpp.0FB00F1E305868B9.idx  LoopUnrolling.h.108900EEB64C636E.idx  MatchManager.cpp.52260E2E2D601846.idx  MatchManager.h.A8C4828D5AB17985.idx  MatchingUtil.h.AAECCAB4BCB3AB41.idx  Packer.cpp.B99466A4A654866E.idx  Packer.h.9CC212C58AE91C6A.idx  Plan.cpp.CC605DEBDAF61416.idx  Plan.h.7510285A6D56D1CA.idx  Reduction.cpp.3DB0BB77F5BEB88B.idx  Reduction.h.725EB87D9687F4E5.idx  Scalarizer.cpp.E03816CE8F6DB58E.idx  Scalarizer.h.7E10808B5B4A61B2.idx  Solver.cpp.6E2F33DC3CDFCDEE.idx  Solver.h.BABA9A247B0ABB44.idx  TestConsecutiveCheck.cpp.6B36CF6DA6D6D866.idx  UnrollFactor.cpp.E0043B78E3A56F2C.idx  UnrollFactor.h.37BA85B77EE46169.idx  VLoop.cpp.E8266217C625A436.idx  VLoop.h.19B530212239FD9B.idx  (+8 more)
benchmark/autovec-benchmark/: .gitignore
benchmark/autovec-benchmark/scripts/: bench.py  output-gnu-.txt  runall.sh  runall_microkernels.sh
benchmark/autovec-benchmark/src/: runvec
benchmark/autovec-benchmark/src/microkernels/: common.mk  compiler_clang__output.txt  compiler_clang_avx2_output.txt  compiler_vegen-clang_avx2_output.txt  output-clang-.txt  output-clang-avx2.txt  output-vegen-clang-avx2.txt
benchmark/autovec-benchmark/src/microkernels/ao/: ao-serial.ppm  ao.ct-novec  ao.ct-vec  ao.rt-novec  ao.rt-vec  clang_avx2_rtvec.txt
benchmark/autovec-benchmark/src/microkernels/ao/optreports/: clang-avx2_ctnovec.s  clang-avx2_ctvec.s  clang-avx2_rtvec.s  clang_avx2_ctnovec.txt  clang_avx2_ctvec.txt  clang_avx2_rtnovec.txt  vegen-clang-avx2_ctvec.s  vegen-clang-avx2_rtnovec.s  vegen-clang-avx2_rtvec.s  vegen_clang_avx2_ctnovec.txt  vegen_clang_avx2_ctvec.txt  vegen_clang_avx2_rtnovec.txt  vegen_clang_avx2_rtvec.txt
benchmark/autovec-benchmark/src/microkernels/binomial/: binomial.ct-novec  binomial.ct-vec  binomial.rt-novec  binomial.rt-vec
benchmark/autovec-benchmark/src/microkernels/binomial/optreports/: clang-avx2_ctvec.s  clang-avx2_rtnovec.s  clang-avx2_rtvec.s  clang_avx2_ctvec.txt  clang_avx2_rtnovec.txt  clang_avx2_rtvec.txt  vegen-clang-avx2_ctnovec.s  vegen-clang-avx2_ctvec.s  vegen-clang-avx2_rtvec.s  vegen_clang_avx2_ctnovec.txt  vegen_clang_avx2_ctvec.txt  (+1 more)
benchmark/autovec-benchmark/src/microkernels/black-scholes/: black-scholes.ct-novec  black-scholes.ct-vec  black-scholes.rt-novec  black-scholes.rt-vec
benchmark/autovec-benchmark/src/microkernels/convolution/: convolution.ct-novec  convolution.ct-vec  convolution.rt-novec  convolution.rt-vec
benchmark/autovec-benchmark/src/microkernels/mandelbrot/: mandelbrot-serial.ppm  mandelbrot.ct-novec  mandelbrot.ct-vec  mandelbrot.rt-novec  mandelbrot.rt-vec
benchmark/autovec-benchmark/src/microkernels/matrixmult/: matrixmult.ct-novec  matrixmult.ct-vec  matrixmult.rt-novec  matrixmult.rt-vec
benchmark/autovec-benchmark/src/microkernels/stencil/: stencil.ct-novec  stencil.ct-vec  stencil.rt-novec  stencil.rt-vec
benchmark/dot-product/: CMakeLists.txt  Makefile  config.sh  dot.cpp  run.sh
gslp/: BlockBuilder.cpp  CMakeLists.txt  CastIntoFloat.h  Compatible.h  ConsecutiveCheck.cpp  ConsecutiveCheck.h  ControlDependence.cpp  ControlDependence.h  ControlReifier.h  DependenceAnalysis.cpp  GSLP.cpp  Heuristic.cpp  Heuristic.h  IRVec.cpp  IRVec.h  InstSema.h  InstSeq.h  IntrinsicBuilder.cpp  IntrinsicBuilder.h  LoopUnrolling.cpp  LoopUnrolling.h  MatchManager.cpp  Packer.cpp  Packer.h  Plan.cpp  Plan.h  Reduction.cpp  Scalarizer.cpp  SimpleParser.cpp  SimpleParser.h  Solver.cpp  Solver.h  TargetPlatformInfo.h  TestBlockBuilder.cpp  UnrollFactor.cpp  UnrollFactor.h  VLoop.cpp  VLoop.h  VectorPack.cpp  VectorPack.h  (+3 more)
gslp/target-sema/: arm.cpp  riscv64.cpp  x86.cpp
sema/: codegen.py  description.py  gen-x86.py  gen_rules.py  lift_sema.py
sema/riscv64/: genWrapper.sh  generator.h  ops.cpp
sema/x86/: fuzzer.py
test/: lit.cfg  lit.site.cfg.in
test/c-test/: add.c  add.ll  dot.c  motion-estimation.c  sum.c  tmp.c  tmp.ll  tmp2.ll
test/codegen/: 1500.reduced.ll  1787.reduced.ll  bug.ll  bug2.ll  bug3.ll  bug4.ll  bug5.ll  diamond-control.ll  gscolor.ll
test/dependence/: cycle3.ll  dep-cycle.ll  loop-break.c  loop-break2.c  pack-control-denpence.c
test/ispc/: c-cif-nested-continue.c  c-for-loop-nested-continues.c  c-for-unif-test-vary-break.c  c-test-108.c  c-test-133.c  c-test-134.c  c-test-62.c  c-test-64.c  c-test-65.c  c-test-66.c  c-test-67.c  c-test-68.c  c-test-69.c  c-test-70.c  c-test-71.c  c-test-76.c  c-test-77.c  cfor-c-cif-nested-continue.c  cfor-c-for-loop-nested-continues.c  cif-nested-continue.c  cwhile-test-59.c  cwhile-test-60.c  do-1.c  for-loop-nested-continues.c
test/newtest/: shift.c
test/riscv/: add.c  addsub.c  api-test.cpp  blaskernel-test.c  blaskernel.c  convolution.c  dot-product.c  fadd-scalar.c  faddsub.c  fft4.c  mask-load.c  sbc.c  testbench.c  testbench.s  vegenbench.c  widen-add.c
test/vectorize/: blender-sss.ll  blender-sss2.ll  bug.ll  even-odd.ll  extract-costs.ll  gather-struct.ll  gather-struct2.ll  gather.ll  gscoord.ll  gxstroke.ll  kake2hiku.ll  mincov.ll  partially-convergent.ll
test/vectorize/unroll/: bullet.ll
utils/: draw.py  instr-count.py  run_sanitizer.sh  vegen-clang.in  vegen-opt.in
(+50 files in other folders)
